tripGo/src/main/java/com/example/tripGo/error/ValidationException.java
package com.example.tripGo.error;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) { super(message); }
}